--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/store-devtools": "^10.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "sweetalert2": "^9.17.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -32,9 +33,9 @@
     "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.10.63",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
