--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,14 @@
     "sourceMap": true,
     "declaration": false,
     "module": "esnext",
+    "types": ["node"],
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2015",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
     ],
     "lib": [
       "es2018",
