--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/store": "^10.0.0",
     "@ngrx/store-devtools": "^10.0.0",
     "core-js": "^2.5.4",
+    "ngx-skeleton-loader": "^2.4.4",
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.32.2",
     "tslib": "^1.9.0",
